--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Library</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="header">Helpful Library
+      <button id="addBookBtn">Add Book</button>
+    </div>
+    <dialog id="bookDialog">
+      <form method="dialog">
+        <h3>Add a New Book</h3>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required />
+
+        <label for="author">Author:</label>
+        <input type="text" id="author" name="author" required />
+
+        <label for="pages">Pages:</label>
+        <input type="number" id="pages" name="pages" required />
+
+        <div class="read-status-container">
+          <label for="read">Read:</label>
+          <input type="checkbox" id="read" name="read" />
+        </div>
+        <div class="form-actions">
+          <button type="submit" id="submitBook">Add Book</button>
+          <button type="button" id="closeDialog">Cancel</button>
+        </div>
+      </form>
+    </dialog>
+    <div id="Library_container">
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
